see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-Jun-2011 Mark Dexter
 # Fix unit test JFilterInput to run correctly

06-Jun-2011 Mark Dexter
 # Fix doInstall for AJAX changes made to installation screens
 ^ Modify SeleniumJoomlaTestCase to check for PHP warnings as well as notices

30-May-2011 Mark Dexter
 # Fix failing system test from change in bluestork template

17-May-2011 Christophe Demko
 # [#25894] *Fatal Error: JDocumentFeed disabled (Jean-Marie Simonet)

14-May-2011 Christophe Demko
 # [#25772] Librairie JDate translates month and day strings for RFC822 format which is not correct

04-May-2011 Mark Dexter
# Fix redirect test

18-Apr-2011 Mark Dexter
+ System test for redirect component

02-Apr-2011 Mark Dexter
# Fix doInstall to set error reporting to Maximum

31-Mar-2011 Mark Dexter
+ [#22618] Automated ACL system test to test manage permission (Tim Plummer)

23-Mar-2011 Mark Dexter
# [#25359] Fix failing unit test for JDocumentRenderRSS

16-Mar-2011 Mark Dexter
# [#25286] Fix failing unit test for JDocument (Rouven Weßling)
# [#25301] Xcache can not be tested using phpunit (Rouven Weßling)
# [#25348] Add more unit tests for JURI (Rouven Weßling)

18-Feb-2011 Mark Dexter
# Fix failing system tests for "published" language change, 404 error change, Save & Close ACL modal change
# Fix failing system tests for id changes made in [#24947]

26-Jan-2011 Mark Dexter
# Fix failing system test

11-Jan-2011 Mark Dexter
# Fix problems with acl0001Test

10-Jan-2011 Mark Dexter
# Fix failing system tests

07-Jan-2011 Mark Dexter
# Fix failing system test

02-Jan-2011 Christophe Demko
 # Correcting unit test since commit #20076
